altered migrations to remove constraints on the postgres db and added a zdummy folder
