# docs/swagger.json
@@ -540,15 +540,31 @@
         "main.dispatcherApplyRequest": {
             "type": "object",
             "required": [
-                "license",
-                "vehicle"
+                "driver_license",
+                "vehicle_model",
+                "vehicle_plate_number",
+                "vehicle_type",
+                "vehicle_year"
             ],
             "properties": {
-                "license": {
+                "driver_license": {
                     "type": "string"
                 },
-                "vehicle": {
+                "vehicle_model": {
                     "type": "string"
+                },
+                "vehicle_plate_number": {
+                    "type": "string"
+                },
+                "vehicle_type": {
+                    "type": "string",
+                    "enum": [
+                        "car",
+                        "motorcycle"
+                    ]
+                },
+                "vehicle_year": {
+                    "type": "integer"
                 }
             }
         },
@@ -558,20 +574,30 @@
                 "created_at": {
                     "type": "string"
                 },
+                "driver_license": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
-                "license": {
-                    "type": "string"
-                },
                 "status": {
+                    "description": "pending, approved, rejected",
                     "type": "string"
                 },
                 "user_id": {
                     "type": "string"
                 },
-                "vehicle": {
+                "vehicle_model": {
                     "type": "string"
+                },
+                "vehicle_plate_number": {
+                    "type": "string"
+                },
+                "vehicle_type": {
+                    "type": "string"
+                },
+                "vehicle_year": {
+                    "type": "integer"
                 }
             }
         },
